# ai-agent

./: .gitignore  README.md  pyproject.toml  sample.yaml
workshops/advanced/: main.py  pyproject.toml
workshops/scenic_area_assistant/: Dockerfile  agent.py  agentkit.yaml  client.py  me.py
workshops/session1/: pyproject.toml
workshops/session2/: README.md  pyproject.toml
workshops/session3/: pyproject.toml
workshops/session4/: README.md  config.yaml.example  pyproject.toml
workshops/session4/basic_a2a/client/: client.py
workshops/session4/basic_a2a/server/: server.py  start.sh
workshops/session4/deploy_a2a/client_code/: client.py  remote_agent.py
workshops/session4/deploy_a2a/client_web/: agent.py
workshops/session4/deploy_a2a/server/: agent.py  deploy.sh
workshops/session4/eposide_generation/: agent.py  image_generator.py  start_image_generator.sh  start_video_generator.sh  video_generator.py
workshops/session4/mcp_amap/: agent.py
workshops/session4/travel_planner/: agent.py
workshops/session5/: config.yaml.example
workshops/session6/: config.yaml.example  env.template  pyproject.toml  sop_aiops.md  sop_database.md  sop_sec.md
workshops/session6/aiops/: agent.py  client.py  setup.py  sop_aiops.md  sop_sec.md
workshops/session6/aiops/agentkit_deploy/: Dockerfile  agent.py  agentkit.yaml  requirements.txt
workshops/session6/oauth/: m2m.py  web.py
workshops/session6/travel_planner_advanced/: agent.py  client.py  travel_qa.md
workshops/session6/travel_planner_advanced/agentkit_deploy/: agentkit.yaml
workshops/veknow/: Dockerfile  (+4 more)
(+154 files in other folders)
